Console truncates long string outputs https://bugs.webkit.org/show_bug.cgi?id=270992 rdar://124629101
Reviewed by BJ Burg.

Changing the white space styling to use pre-wrap allows the text to break when needed, for
fitting within the screen, while maintaining it's current breaks at newlines and <br> tags.
This allows long console outputs to be displayed within screen bounds.

* Source/WebInspectorUI/UserInterface/Views/FormattedValue.css:
(.formatted-string, .formatted-regexp):

Canonical link: https://commits.webkit.org/300077@main

--- a/Source/WebInspectorUI/UserInterface/Views/FormattedValue.css
+++ b/Source/WebInspectorUI/UserInterface/Views/FormattedValue.css
@@ -43,7 +43,7 @@
 }
 
 .formatted-string, .formatted-regexp {
-    white-space: pre;
+    white-space: pre-wrap;
     unicode-bidi: isolate;
 }
 
